# stickyapp_rust

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md
k8s/: clusters.json  json-patch-vs-ingress.json  list-repos.sh  patched-vs-entries.json  stickyapp-rust-envoyfilter-hybrid.yaml  stickyapp-rust-gateway-hybrid.yaml  stickyapp-rust-ingress-vs.json  stickyapp-rust-ksvc.yaml  stickyapp-rust.yaml
scripts/: dockerrun.sh
src/: main.rs  session.rs  session_common.rs  session_encrypted.rs  utils.rs
test/: profile-stickyapp_rust.py  profile_utils.py  test_curl.sh  test_locust.sh
