[package]
name = "stickyapp_rust"
version = "0.1.3"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.2.*"
bytes = "1"
hyper = { version = "0.14.*", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4.8", features = ["full"] }
tower-http = { version = "^0.1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.2"
uuid = { version = "0.8", features = ["v4"]}
concrete = "0.1.9"
chrono = "0.4"
itertools = "0.9.0"
lazy_static = "1.4.0"
